--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "2.13.0",
-    "webpack": "5.88.1"
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
-      "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4"
   }
 }
